Added more form for Sale input

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,25 +1,23 @@
 {
-    "/js/app.js": "/js/app.js?id=f2ddf9520fea721dcace",
+    "/js/app.js": "/js/app.js?id=c800d39a91a441154322",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
-    "/js/auth.forget.js": "/js/auth.forget.js?id=637173bb39cdc191f5c9",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=ce55e6d20edba11a6104",
-    "/js/auth.login.js": "/js/auth.login.js?id=259b0fd89cdf4bfeb1ec",
-    "/js/auth.reset.js": "/js/auth.reset.js?id=5c4d14e6f27644724b1c",
-    "/js/auth.verify.js": "/js/auth.verify.js?id=92867a1cf609ef5ace1e",
-    "/js/dashboard.js": "/js/dashboard.js?id=b2778257ccb02f22ef71",
-    "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=dd665a5d74b537c5fce7",
-    "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
-    "/js/formula.js": "/js/formula.js?id=d0b943e7cfac999c0659",
-    "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
-    "/js/material.js": "/js/material.js?id=5b1c8649353d96846491",
-    "/js/matter.js": "/js/matter.js?id=f74163b8bfab0e1213d8",
-    "/js/pack.js": "/js/pack.js?id=aec8ceea07b493673af9",
-    "/js/package.js": "/js/package.js?id=82d64a4d6a2df26162bc",
-    "/js/packer.js": "/js/packer.js?id=d32dcd4ea50d8e65bb6d",
-    "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
-    "/js/profile.js": "/js/profile.js?id=d6cd41387fc2f3f1c2ad",
-    "/js/user.js": "/js/user.js?id=0ca226a8c7977949e205",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js?id=34a41808f55dd751552c",
-    "/js/dashboard~formula~material~matter~pack~package~packer~profile~sale~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~sale~user.js?id=82eebc897c4528ab0e58",
-    "/js/sale.js": "/js/sale.js?id=aadb8f69015b96f706e2"
+    "/js/auth.forget.js": "/js/auth.forget.js?id=806d47fef2740e57117e",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js?id=b72fb2c33293d9bfee39",
+    "/js/auth.login.js": "/js/auth.login.js?id=e7553d56bf32073d726b",
+    "/js/auth.reset.js": "/js/auth.reset.js?id=95f33e74dc04c42cdf33",
+    "/js/auth.verify.js": "/js/auth.verify.js?id=172002610ccf3bcca9a4",
+    "/js/dashboard.js": "/js/dashboard.js?id=d07f699ff79ff4162fd6",
+    "/js/dashboard~formula~material~matter~pack~package~packer~profile~sale~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~sale~user.js?id=6e5eb24b01910ae9a681",
+    "/js/error.js": "/js/error.js?id=37c63176de9b2108f96c",
+    "/js/formula.js": "/js/formula.js?id=54293284f359b52d183f",
+    "/js/landing.js": "/js/landing.js?id=181855c974c6bb359724",
+    "/js/material.js": "/js/material.js?id=9dbbe55b2f62efcd12fd",
+    "/js/matter.js": "/js/matter.js?id=58f12b7f7b821f685d4b",
+    "/js/pack.js": "/js/pack.js?id=a957e2511d8043184044",
+    "/js/package.js": "/js/package.js?id=98eff32c8e859339dbcc",
+    "/js/packer.js": "/js/packer.js?id=64af7d2a44a62554c918",
+    "/js/policy.js": "/js/policy.js?id=3ca71ada821cc5243155",
+    "/js/profile.js": "/js/profile.js?id=6c7f91667f8ad1fee3cb",
+    "/js/sale.js": "/js/sale.js?id=9b0193e46e1a7958d1c4",
+    "/js/user.js": "/js/user.js?id=cd32a51013aee3db379b"
 }
