--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,23 +1,24 @@
 {
-    "/js/app.js": "/js/app.js?id=6d409a7a79819196ebdc",
+    "/js/app.js": "/js/app.js?id=abc14f8d7f46c6209ee5",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
-    "/js/auth.forget.js": "/js/auth.forget.js?id=806d47fef2740e57117e",
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js?id=484d1feb7c07dcc53586",
-    "/js/auth.login.js": "/js/auth.login.js?id=e7553d56bf32073d726b",
-    "/js/auth.reset.js": "/js/auth.reset.js?id=95f33e74dc04c42cdf33",
-    "/js/auth.verify.js": "/js/auth.verify.js?id=172002610ccf3bcca9a4",
-    "/js/dashboard.js": "/js/dashboard.js?id=e17fe4f086c93dbbf3b3",
-    "/js/dashboard~formula~material~matter~pack~package~packer~profile~sale~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~sale~user.js?id=6e5eb24b01910ae9a681",
-    "/js/error.js": "/js/error.js?id=37c63176de9b2108f96c",
-    "/js/formula.js": "/js/formula.js?id=19bc6ebd2ecf1ae8bbaf",
-    "/js/landing.js": "/js/landing.js?id=181855c974c6bb359724",
-    "/js/material.js": "/js/material.js?id=1efd2a68657dc2edefe6",
-    "/js/matter.js": "/js/matter.js?id=58f12b7f7b821f685d4b",
-    "/js/pack.js": "/js/pack.js?id=a957e2511d8043184044",
-    "/js/package.js": "/js/package.js?id=e754be001abdd1a40c55",
-    "/js/packer.js": "/js/packer.js?id=64af7d2a44a62554c918",
-    "/js/policy.js": "/js/policy.js?id=3ca71ada821cc5243155",
-    "/js/profile.js": "/js/profile.js?id=d92a602a382491990d11",
-    "/js/sale.js": "/js/sale.js?id=ae0e1cc6a2a25a669345",
-    "/js/user.js": "/js/user.js?id=d1cacbb0dbc2dfb3e66b"
+    "/js/auth.forget.js": "/js/auth.forget.js?id=637173bb39cdc191f5c9",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js?id=9a453e6182a243da8ddb",
+    "/js/auth.login.js": "/js/auth.login.js?id=259b0fd89cdf4bfeb1ec",
+    "/js/auth.reset.js": "/js/auth.reset.js?id=5c4d14e6f27644724b1c",
+    "/js/auth.verify.js": "/js/auth.verify.js?id=92867a1cf609ef5ace1e",
+    "/js/dashboard.js": "/js/dashboard.js?id=ecd0679cefaf6883bd87",
+    "/js/dashboard~formula~material~matter~pack~package~packer~profile~sale~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~sale~user.js?id=82eebc897c4528ab0e58",
+    "/js/error.js": "/js/error.js?id=5263f23ad7e197ac91dd",
+    "/js/formula.js": "/js/formula.js?id=c850cb39b5a523ea4c70",
+    "/js/landing.js": "/js/landing.js?id=fc723af382a7469ba5f6",
+    "/js/material.js": "/js/material.js?id=4cd7baa242ef56ad7a13",
+    "/js/matter.js": "/js/matter.js?id=c621418cb06efc039fa8",
+    "/js/pack.js": "/js/pack.js?id=813cc3faa75ac5c7274c",
+    "/js/package.js": "/js/package.js?id=1c84dfb80318a5b3e632",
+    "/js/packer.js": "/js/packer.js?id=9487f19f0fe904ba6099",
+    "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
+    "/js/profile.js": "/js/profile.js?id=6bbc0d82f00f994155c5",
+    "/js/sale.js": "/js/sale.js?id=238b36878c351cebc4e2",
+    "/js/user.js": "/js/user.js?id=bd12ac6882516037beea",
+    "/js/profile~user.js": "/js/profile~user.js?id=21c4a8d528020c1cce1f"
 }
