--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=b0b0f1e407f834f5d527",
+    "/js/app.js": "/js/app.js?id=68311b0bdb836f385668",
     "/css/app.css": "/css/app.css?id=3462204912f6bda7044e",
     "/js/auth.forget.js": "/js/auth.forget.js?id=637173bb39cdc191f5c9",
     "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js?id=9a453e6182a243da8ddb",
@@ -18,7 +18,9 @@
     "/js/packer.js": "/js/packer.js?id=9487f19f0fe904ba6099",
     "/js/policy.js": "/js/policy.js?id=9d3a32bdd6038c7ebf7b",
     "/js/profile.js": "/js/profile.js?id=b9065169b4391c6e3f6e",
-    "/js/sale.js": "/js/sale.js?id=91b3ed5d7c04d6397d9b",
+    "/js/profile~user.js": "/js/profile~user.js?id=21c4a8d528020c1cce1f",
+    "/js/sale.js": "/js/sale.js?id=94258b6a96f59de0c7f1",
     "/js/user.js": "/js/user.js?id=bd12ac6882516037beea",
-    "/js/profile~user.js": "/js/profile~user.js?id=21c4a8d528020c1cce1f"
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~ed9224b0.js?id=e3e61f56d074af047a72",
+    "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~user.js?id=dd665a5d74b537c5fce7"
 }
