Added dark mode feature

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,22 +1,22 @@
 {
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~formula~material~matter~pack~package~packer~~42253f74.js?id=7e9bb09dc2beef745bd3",
-    "/js/app.js": "/js/app.js?id=64de8efe22bed142a867",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~error~formula~material~matter~pack~package~p~3fcb84eb.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~error~formula~material~matter~pack~package~p~3fcb84eb.js?id=182fd6ae102dfa6eae53",
+    "/js/app.js": "/js/app.js?id=c29cb344e53cef693372",
     "/css/app.css": "/css/app.css?id=ffcbf4e2bd292e6df83f",
     "/js/auth.forget.js": "/js/auth.forget.js?id=efa4285c8e2c587dd30b",
     "/js/auth.login.js": "/js/auth.login.js?id=4cd060c11ab9a91d5fcd",
     "/js/auth.reset.js": "/js/auth.reset.js?id=5b77aeda21dd5444b815",
     "/js/auth.verify.js": "/js/auth.verify.js?id=db49422ca54499a47504",
-    "/js/dashboard.js": "/js/dashboard.js?id=60d89bf8ad09b55832d2",
-    "/js/error.js": "/js/error.js?id=b0c9a5320f8778fbad63",
-    "/js/formula.js": "/js/formula.js?id=34a19db38008f5826afa",
+    "/js/dashboard.js": "/js/dashboard.js?id=7b0810397af429fd0e90",
+    "/js/error.js": "/js/error.js?id=1d80e81e372dfa0b59c9",
+    "/js/formula.js": "/js/formula.js?id=7cef73179761b613f9ec",
     "/js/landing.js": "/js/landing.js?id=2f921af60820ed4b3aff",
-    "/js/material.js": "/js/material.js?id=79f01a3c028898939bbb",
-    "/js/matter.js": "/js/matter.js?id=b2a539085a83fbb3b5bc",
-    "/js/pack.js": "/js/pack.js?id=1683424720f2e6365e98",
-    "/js/package.js": "/js/package.js?id=5f48bc911be2f6722f03",
-    "/js/packer.js": "/js/packer.js?id=3a639efbfb1129bcd24e",
+    "/js/material.js": "/js/material.js?id=82fb1c355687f28a1ba5",
+    "/js/matter.js": "/js/matter.js?id=0dac9538718c2d08acef",
+    "/js/pack.js": "/js/pack.js?id=ba4d77af67dd2b8e650c",
+    "/js/package.js": "/js/package.js?id=2a8af553946d1a32c83d",
+    "/js/packer.js": "/js/packer.js?id=787f94537c3864ac7553",
     "/js/policy.js": "/js/policy.js?id=3238b6421cf33136f6fc",
-    "/js/profile.js": "/js/profile.js?id=61fe84934a117378b831",
-    "/js/sale.js": "/js/sale.js?id=f52ff4e31bed554fb3b3",
-    "/js/user.js": "/js/user.js?id=fcf2f45a249c3b012723"
+    "/js/profile.js": "/js/profile.js?id=4707fe07465d57bb80b3",
+    "/js/sale.js": "/js/sale.js?id=f4b5d93a2afdc3d0cd91",
+    "/js/user.js": "/js/user.js?id=8c396d423abb087244c0"
 }
