--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vee-validate": "^3.4.0",
         "vue": "^2.6.12",
         "vue-currency-filter": "^5.2.0",
+        "vue-directive-long-press": "^1.1.0",
         "vue-fragment": "^1.5.1",
         "vue-fullscreen": "^2.1.6",
         "vue-lodash": "^2.1.2",
