--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "vue-fragment": "^1.5.1",
         "vue-fullscreen": "^2.1.6",
         "vue-lodash": "^2.1.2",
+        "vue-long-click": "0.0.4",
         "vue-moment": "^4.1.0",
         "vue-router": "^3.4.6",
         "vuetify": "^2.3.13",
