--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,8 +1,7 @@
 ---
 deployment:
   tasks:
-    # - export BACK_END_PATH=/home/genmotor/formula.genmotorcycles.com/laravel/
     - export BACK_END_PATH=/home/genmotor/formula_backend/
-    - export FRONT_END_PATH=/home/genmotor/formula.genmotorcycles.com/
+    - export FRONT_END_PATH=/home/genmotor/formula.garda-energi.com/
     - /bin/rsync -avr --exclude '.git/' --exclude 'public/' . $BACK_END_PATH
     - /bin/rsync -avr --exclude 'index.php' public/ $FRONT_END_PATH
