--- a/package.json
+++ b/package.json
@@ -10,15 +10,12 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "browser-sync": "^2.26.12",
-        "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.6",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.27.0",
-        "sass-loader": "^8.0.0",
-        "vue-template-compiler": "^2.6.12",
-        "webpack-livereload-plugin": "^1.2.0"
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "axios": "^0.19.2",
