Remove manifest path changer for cpanel

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,7 +1,9 @@
 ---
 deployment:
   tasks:
-    - export BACK_END_PATH=/home/genmotor/formula_backend/
-    - export FRONT_END_PATH=/home/genmotor/formula.garda-energi.com/
-    - /bin/rsync -avr --exclude '.git/' --exclude 'public/' . $BACK_END_PATH
-    - /bin/rsync -avr --exclude 'index.php' public/ $FRONT_END_PATH
+    # - export BACK_END_PATH=/home/genmotor/formula_backend/
+    # - export FRONT_END_PATH=/home/genmotor/formula.garda-energi.com/
+    # - /bin/rsync -avr --exclude '.git/' --exclude 'public/' . $BACK_END_PATH
+    # - /bin/rsync -avr --exclude 'index.php' public/ $FRONT_END_PATH
+    - export HOSTING_PATH=/home/genmotor/formula.garda-energi.com/
+    - /bin/rsync -avr --exclude '.git/' . $HOSTING_PATH
