--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "devDependencies": {
         "cross-env": "^7.0",
+        "eslint": "^7.20.0",
+        "eslint-plugin-vue": "^7.6.0",
         "laravel-mix": "^5.0.6",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.27.0",
