--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,22 +1,24 @@
 {
-    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~error~formula~material~matter~pack~package~p~3fcb84eb.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~error~formula~material~matter~pack~package~p~3fcb84eb.js?id=801aea32f1156d7906a6",
-    "/js/app.js": "/js/app.js?id=ad5aa4973ef5c5cdc49d",
-    "/css/app.css": "/css/app.css?id=ffcbf4e2bd292e6df83f",
-    "/js/auth.forget.js": "/js/auth.forget.js?id=cfac57079b6166772153",
-    "/js/auth.login.js": "/js/auth.login.js?id=94236fc34da7c5c45c3b",
-    "/js/auth.reset.js": "/js/auth.reset.js?id=8e5d186c8fbf1bd0e2be",
-    "/js/auth.verify.js": "/js/auth.verify.js?id=63a64a5f4e6cf05b81b7",
-    "/js/dashboard.js": "/js/dashboard.js?id=52c2d21c5c98acc3b399",
-    "/js/error.js": "/js/error.js?id=7b7de9aa251722c59229",
-    "/js/formula.js": "/js/formula.js?id=b88f95c97a57a8e7f5fb",
-    "/js/landing.js": "/js/landing.js?id=2f921af60820ed4b3aff",
-    "/js/material.js": "/js/material.js?id=97e743c7a4dadf5d1e70",
-    "/js/matter.js": "/js/matter.js?id=1cf001af26795f5695da",
-    "/js/pack.js": "/js/pack.js?id=cb0f639f3f923279eb20",
-    "/js/package.js": "/js/package.js?id=e947abadec8cb86bbc3e",
-    "/js/packer.js": "/js/packer.js?id=c38f1f72365c06a3dd2b",
-    "/js/policy.js": "/js/policy.js?id=cf55f33dfbad2a65cf5b",
-    "/js/profile.js": "/js/profile.js?id=9eee6c1c463ee57de915",
-    "/js/sale.js": "/js/sale.js?id=b34d4d0868fe9f151649",
-    "/js/user.js": "/js/user.js?id=edde21cb874e1a816bb3"
+    "/js/app.js": "/js/app.js?id=b9798c13ba77efed135b",
+    "/css/app.css": "/css/app.css?id=41385eea65fc61c5dad4",
+    "/js/auth.forget.js": "/js/auth.forget.js?id=3f8c1e673718bd736e15",
+    "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~error~formula~material~matter~pack~package~p~3fcb84eb.js": "/js/auth.forget~auth.login~auth.reset~auth.verify~dashboard~error~formula~material~matter~pack~package~p~3fcb84eb.js?id=c59b21e0fc8f537ff356",
+    "/js/auth.login.js": "/js/auth.login.js?id=7abf1895e5800b904706",
+    "/js/auth.reset.js": "/js/auth.reset.js?id=06a0f2fc1217456ddb57",
+    "/js/auth.verify.js": "/js/auth.verify.js?id=927cadf14f15abe8087b",
+    "/js/dashboard.js": "/js/dashboard.js?id=7fdd05483a0e04e5eef1",
+    "/js/dashboard~formula~material~matter~pack~package~packer~profile~sale~user.js": "/js/dashboard~formula~material~matter~pack~package~packer~profile~sale~user.js?id=ead97f59a69618cef92e",
+    "/js/error.js": "/js/error.js?id=c6b2237895f2f04f350d",
+    "/js/formula.js": "/js/formula.js?id=aac390932670423263a1",
+    "/js/landing.js": "/js/landing.js?id=006ec542ead5c6e2f68e",
+    "/js/material.js": "/js/material.js?id=a4aebab4b1760dfdd632",
+    "/js/matter.js": "/js/matter.js?id=45e479d8bdee3f20049a",
+    "/js/pack.js": "/js/pack.js?id=0f7afd35c2d1aa36b5ac",
+    "/js/package.js": "/js/package.js?id=f5b1e437db4eb1861143",
+    "/js/packer.js": "/js/packer.js?id=5ac9a95e4cc74fb1c0b3",
+    "/js/policy.js": "/js/policy.js?id=1f191f15d404d009c663",
+    "/js/profile.js": "/js/profile.js?id=a7aaeee9a3894442007f",
+    "/js/profile~user.js": "/js/profile~user.js?id=8187aa3c903458411f0c",
+    "/js/sale.js": "/js/sale.js?id=9a530ee6bda2d2d80a80",
+    "/js/user.js": "/js/user.js?id=628398d4fddbf7cb7b2f"
 }
